# bevy_python_ffi

./: .gitignore  Cargo.toml  README.md  setup.py
.github/workflows/: test.yml
examples/image_upload/: Cargo.toml  README.md  setup.py
examples/image_upload/python/: main.py
examples/image_upload/src/: lib.rs
examples/minimal/: Cargo.toml  README.md
examples/minimal/src/: lib.rs
python/: minimal.py
src/: lib.rs
