[package]
name = "bevy_python_ffi"
description = "run and interact with bevy apps from python"
version = "0.2.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT"
keywords = [
  "bevy",
  "python",
  "pyo3",
]
homepage = "https://github.com/mosure/bevy_python"
repository = "https://github.com/mosure/bevy_python"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]


[dependencies]
once_cell = "1.19"
pyo3 = { version = "0.22", features = ["extension-module", "macros"] }


[dependencies.bevy]
version = "0.13"
default-features = false
features = [
  "bevy_asset",
  "bevy_render",
]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1


[lib]
name = "bevy_python_ffi"
path = "src/lib.rs"
