[package]
name = "bevy_python_image_upload"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"


[dependencies]
pyo3 = { version = "0.21" }
bevy_python_ffi = { path = "../../" }


[dependencies.bevy]
version = "0.13"
default-features = false
features = [
  "bevy_asset",
  "bevy_render",
  "bevy_ui",
  "bevy_winit",
]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1



[lib]
name = "bevy_python_image_upload"
path = "src/lib.rs"
