[package]
name = "bevy_python"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"


[dependencies]
pyo3 = { version = "0.21" }


[dependencies.bevy]
version = "0.13"
default-features = false


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1



[lib]
name = "bevy_python_minimal"
path = "src/lib.rs"
